--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.73.0"
 uvicorn = "^0.17.4"
 gunicorn = "^20.1.0"
 pyaml = "^21.10.1"
+pythonipqsdbreader = {git = "https://github.com/IPQualityScore/PythonIPQSDBReader", rev = "v1.0.5"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
